# esc-bootloader

./: README.md
.github/workflows/: build.yml
firmware/: CMakeLists.txt  bootloader.c  ch32v20x_it.c  ch32v20x_it.h  main.c  main.h
firmware/wch/: ch32v20x_conf.h  ch32v20x_it.c
